actualizacion del index

--- a/holagit.html
+++ b/holagit.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>HOLA REPOSITORIO DE GIT</h1>
+    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui consectetur molestias labore amet, illo ut quo explicabo, perferendis soluta unde dolor exercitationem. Omnis excepturi dolorem voluptatibus similique est nulla voluptas.</h2>
     <img src="captura.png" alt="">
 </body>
 </html>
