--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>HOLA REPOSITORIO DE GIT</h1>
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit sit atque nisi suscipit veniam incidunt totam veritatis dicta inventore velit nostrum, magnam dolores error eius provident eos delectus tenetur repudiandae.</h2>
     <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui consectetur molestias labore amet, illo ut quo explicabo, perferendis soluta unde dolor exercitationem. Omnis excepturi dolorem voluptatibus similique est nulla voluptas.</h2>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat sequi autem eveniet ratione eligendi dignissimos aliquid odit doloremque quo labore accusantium libero officia id perferendis provident iste alias, laborum rem?</h2>
     <img src="captura.png" alt="">
 </body>
 </html>
